# LLM-Vector-database

./: .gitignore  .pre-commit-config.yaml  README.md  construct_db.py  demo.py  example.py  llama.py  main  main.py  model.py  open_ai.py  pyproject.toml  requirements.txt  test.py  vector_database.py
data/: generated_data.json
llmvdb/: __init__.py  exceptions.py
llmvdb/embedding/: base.py  fake.py  model.py  openai.py
llmvdb/helpers/: ineterface.py
llmvdb/llm/: __init__.py  base.py  fake.py  koalpaca.py  kullm.py  langchain.py  llama.py  llama2.py  openai.py
llmvdb/module/: doc.py  exceptions.py
llmvdb/vdb/: customdataset.py  doc.py  huggingface.py
module/: exceptions.py  model.py  prompter.py
templates/: law.json
tests/: test_llmvdb.py  test_simple.py
