[tool.poetry]
name = "llmvdb"
version = "0.1.0"
description = ""
authors = ["juicyjung <travelandi01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vectordb = "^0.0.18"
docarray = "^0.37.1"
langchain = "^0.0.283"
openai = "^0.28.0"
streamlit = "^1.26.0"
streamlit-chat = "^0.1.1"
transformers = "^4.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
